# tokenIndexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tokenindexer_commits_2026.txt
docker/: entrypoint.sh
docs/: BLUEPRINT.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  OPERATIONS.md
migrations/: 0001_init.sql  0002_holder_address.sql  0003_activity_indexes.sql  0004_bcmr.sql  0005_bcmr_category_checks.sql  0006_prune_extinct_token_stats.sql
scripts/integration/: api-smoke.sh  reorg-smoke.sh
scripts/load/: k6-eligibility.js  run-vegeta.sh  vegeta-holders-targets.txt
scripts/ops/: kuma-bootstrap-remote.js  kuma-monitors.example.json  kuma-monitors.live.json  postgres_tuning.sql  token_outpoints_hash_partition_bootstrap.sql
src/: config.rs  main.rs  model.rs
src/api/: cache.rs  legacy.rs  mod.rs  ratelimit.rs  routes.rs
src/bcmr/: mod.rs  opreturn.rs  worker.rs
src/db/: mod.rs  queries.rs
src/ingest/: mempool.rs  mod.rs  reconcile.rs  rpc.rs  worker.rs
