[package]
name = "tokenindex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CashTokens-specific BCH indexer and REST API"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
http = "1.1"
num-bigint = "0.4"
num-traits = "0.2"
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "macros"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serde_path_to_error = "0.1"

[profile.release]
lto = true
codegen-units = 1
